--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Carlito, sans-serif;
     background-color: #ffe6f2;
     color: #333;
     margin: 0;
