--- a/index.css
+++ b/index.css
@@ -6,6 +6,11 @@ body {
     padding: 24px;
 }
 
+title{
+    font-size: 36px;
+}
+
+
 header {
     text-align: center;
     font-family: 'Nunito', sans-serif;
