--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Nunito', sans-serif;
-    background-color: #ffe6f2; /* Soft pink background */
-    color: #1a0201;
+    background-color: #fff0f3; /* Soft pink background */
+    color: #590d22;
     margin: 0;
     padding: 24px;
 }
@@ -14,7 +14,7 @@ title{
 header {
     text-align: center;
     font-family: 'Nunito', sans-serif;
-    background: #ffb6c1; /* Light pink background */
+    background: #fff0f3; /* Light pink background */
     padding: 24px;
     border-radius: 12px;
 }
@@ -22,7 +22,7 @@ header {
 section {
     margin: 20px 0;
     font-family: 'Nunito', sans-serif;
-    color: #1a0201;
+    color: #590d22;
     padding: 12px;
     background: white;
     border-radius: 12px;
@@ -31,7 +31,7 @@ section {
 
 h1 {
     font-family: 'Nunito', sans-serif;
-    color: #1a0201;
+    color: #590d22;
 }
 
 a {
@@ -41,7 +41,7 @@ a {
 /* Navigation Bar Styles */
 nav {
     text-align: center;
-    color: #1a0201;
+    color: #590d22;
     margin-top: 24px;
 }
 
@@ -49,7 +49,7 @@ nav a {
     display: inline-block;
     text-decoration: none;
     color: white;
-    background-color: #c2185b; /* background for buttons */
+    background-color: #ff758f; /* background for buttons */
     padding: 12px 24px;
     margin: 12px;
     border-radius: 24px; /* rounded corners*/
@@ -59,10 +59,10 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #960b42; /* darker pink on hover */
+    background-color: #c9184A; /* darker pink on hover */
     transform: scale(1.1); /* enlarge on hover */
 }
 
 nav a:active {
-    background-color: #9c155e; /* Even darker pink on active */
+    background-color: #800f2f; /* Even darker pink on active */
 }
