--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ h1 {
 }
 
 a {
-    color: #d63384; /* Pink color for links */
+    color: #c9184a; /* Pink color for links */
 }
 
 /* Navigation Bar Styles */
