--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ title{
 header {
     text-align: center;
     font-family: 'Nunito', sans-serif;
-    background: #fff0f3; /* Light pink background */
+    background: #ffb3c1; /* Light pink background */
     padding: 24px;
     border-radius: 12px;
 }
